Cập nhật giao diện và logic quản lý phòng: điều chỉnh cấu trúc mã, cải thiện hiển thị trạng thái phòng và loại phòng trong bảng, loại bỏ mã không cần thiết, và tối ưu hóa các phương thức xử lý.